src/index.css
/***********************************************/
/* Normalisation opinionated
/************************************************/
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/***********************************************/
/* fontface
/************************************************/
@font-face {
  font-family: roboto-r;
  src: url(../src/font/roboto-regular.ttf);
}
@font-face {
  font-family: roboto-b;
  src: url(../src/font/roboto-bold.ttf);
}
/***********************************************/
/* base styling 
/************************************************/
body {
  font-family: roboto-r ,"Open Sans", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 100%;
  color: #928e8e;
  background-color:#383737;
}
img,
svg {
  width: 100%;
}

/***********************************************/
/* Hero Area component
/************************************************/
.hero-area{
  overflow: hidden;
  background: url(../src/images/header-bg-image.jpg) no-repeat center;
  background-size: cover; 
  height: 350px;
}

/* media query
/************************************************/
@media all and (max-width: 768px){
  .hero-area{
    background-attachment: fixed;
  }
  
}
@media all and (min-width: 769px){
  .hero-area{
    height: 300px;
    width: 100%;
  }
}

/***********************************************/
/* Side bar component
/************************************************/
.side-bar{
  position: fixed;
  top:0;
  left:0;
  height: 100vh;
  z-index: 100;
  transition: width .65s;
  background-color: rgba(0,0, 0 ,.5);
  overflow-x: hidden;
}

.logo{
  width: 300px;
  height: 320px;
  margin: 0px auto;
  
}

.menu{
  padding: 15px;
  outline: none;
  border: none;
  cursor: pointer;
  color: #fff;
  position: absolute;
  top:0px;
  left:0px;
  background-color: rgba(0,0, 0 ,.7);
}
.menu:hover{
  background-color: rgba(0,0, 0 ,.9);
}
#menu{
  display: none;
}

.list-of-employee ul{
  list-style: none;
}
.list-of-employee li {
  display: block;
  width: 100%;
  text-align: center;
  transition: hover .69s;
  color: #fff;
}

.list-of-employee li:hover{
  background-color: #383737;
  cursor: pointer;
}

/* media query
/************************************************/
@media all and (max-width: 768px){
  .side-bar{
    width: 0%;
  }
  #menu:checked ~ .side-bar {
    width: 100%;
    background-color: rgba(0,0, 0 ,.9);
  }
  .logo{
    margin-top: -60px;
  }
}

@media all and (min-width: 769px){
  .side-bar{
    width: 30%;
  }
  .menu{
    display: none;
  }
}

/***********************************************/
/* employee details component
/************************************************/
.emp-details-container {
  margin: 0 auto;
  color: #fff;
}
.emp-name{
  font-weight: 400;
}
.emp-bio{
  background-color: #1f1e1e;
  border-radius: 5px;
  padding: 10px;
}
.emp-bio h3{
  padding: 10px 0;
}
.emp-associate{
  padding: 20px 0px;
}
.emp-associate strong{
  font-size: 1.1em;
  font-weight: 300;
}

/* media query
/************************************************/
@media all and (max-width: 768px){
  .emp-details-container {
    position: absolute;
    height: 50%;
    margin-top: -25%;
  }
  .emp-name{
    text-align: center;
  }
  .emp-other-details{
    padding: 10px;
  }
}
@media all and (min-width: 769px){
  .emp-details-container {
    width: 90%;
    margin-top: -60px;
    margin-left: 15%;
  }
  .emp-image,
  .emp-other-details{
    display: inline-block;
    vertical-align: top;
    margin: 0 1%;
  }
  .emp-image{
    width: 20%;
  }
  .emp-other-details{
    width: 70%
  }
  .emp-associate strong{
    font-size: 1.2em;
  }
  
}

@media all and (min-width: 1200px){
  .emp-details-container {
    width: 800px;
    margin-left: 35%;
  }
}

/***********************************************/
/* slider component
/************************************************/
.slider-container{
 margin: 30px 2%;
}
.slider-title,
.slider{
 display: inline-block;
 vertical-align: middle;
}
.slider-title{
  width: 30%;
  font-family: roboto-b
}
.slider{
  position: relative;
  width: 60%;
}
.slider .slide-btn{
  position: absolute;
  top: -8px;
  left: 10px;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  box-shadow: 0px 0px 10px 2px rgba(0,0, 0 ,.8);
  background-color: #fff;
}
.slide-line{
height: 5px;
background-color: #1b1a1a;
border-radius: 5px;
}

/***********************************************/
/* slider component
/************************************************/
.profile-image{
  width: 100px;
  height: 100px;
  margin: auto;
  box-shadow: 0px 2px 100px 1px rgba(0,0, 0 ,.8);
}
/* media query
/************************************************/
@media all and (min-width: 769px){
  .profile-image{
    width: 150px;
    height: 150px;
  }
}
/***********************************************/
/* employee component
/************************************************/
.employee-conatainer span{
  display: block;
  width: 100%;
  padding: 10px;
}

/***********************************************/
/* helper class
/************************************************/

.text-shadow{
  text-shadow: 2px 2px 40px rgba(0,0, 0 ,.8);
}

